# agora

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  OLLAMA.md  README.md  profiles.yaml  pyproject.toml  roles.yaml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  03-research.yml  config.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: standard-v1.yaml
campaigns/: axis-1-tool-call-fidelity-v2.yaml  axis-1-tool-call-fidelity.yaml  axis-1-v3.0.1.yaml  axis-1-v3.0.yaml  axis-1-v3.2.yaml  axis-1-v5-gemma.yaml  axis-1-v6-gemma.yaml  axis-1-v7-gemma.yaml  axis-1-v8.yaml  integration-run-1.yaml  integration-run-2.yaml  integration-run-3-corrections.yaml  integration-run-3.yaml
casts/: p40-24gb.yaml
conduit/: conduit.example.toml  docker-compose.yml
docs/: Makefile  SETUP.md  conf.py  element-setup.md  index.md  lessons-learned.md  make.bat
docs/api/: index.rst
docs/arc/: arc-outline.md  arc.md
docs/architecture/: README.md  handoff_lifecycle.puml  repair_oracle_loop.puml  roles_casting.puml  system_dataflow.puml  tool_call_turn.puml
docs/design/: capability-exchange.md  capability-program-plan.md  deployment-reconciliation.md  integration-hardening.md  onboarding-premortem.md  project-phases.md  roles-and-casting.md
docs/diagrams/: README.md  architecture.puml  project_phases.puml  task_sequence.puml  task_status.puml
docs/exchange/: CONTRIBUTING.md
docs/history/: commit-map.txt
docs/integration/: project-state-template.md  repair-task-template.md  run-1-echobot-spec.md  run-3-brownfield-spec.md
docs/plans/: axis-1-v2.md
docs/research/: harness-reliability.md  model-roster.md  prompting-strategies.md
docs/runs/: README.md  axis-1-design-notes.md  axis-1-findings.md  baseline-32b.run1.md  discord-bot.run13.md  discord-bot.run3.md  findings.md  plan-builder.run14-4omini-clean.md  publishable.md  registry.yaml  registry_notes.yaml  rendering-series-findings.md  url-shortener-mvp.live.md  url-shortener-mvp.run1-7b-broken.md
flows/: fastapi-crud.plan.yaml  integration-run-1-echobot.flow.yaml  integration-run-3-brownfield.flow.yaml  integration-run-3-corrections.flow.yaml  plan-builder.plan.yaml  tool-call-fidelity.plan.yaml
flows/builtin/: architect-implementer-tester.yaml  architect-implementer.yaml  solo.yaml
scripts/: analyze_layer2.py  auto_vote_plan_builder.py  autopsy_final_turns.py  check_date_provenance.py  check_hardening_invariants.py  compare_campaigns.py  expand_campaign.py  extract_run_metadata.py  forensic_stale_out.py  p3_qwen3_divergence.py  probe_model_lifecycle.py  render_diagrams.py  run_campaign.py  run_code_review.py  run_discord_bot_full_test.py  run_discord_bot_test.py  run_fastapi_crud_test.py  run_phased.py  run_plan.py  run_plan_builder.py  run_sweep_staged.py  run_tool_call_fidelity.py  strip_inner_git.py
src/agora/: cli.py  config.py  doctor.py
tests/: conftest.py  test_cli.py  test_doctor.py
tests/bench/: test_battery.py  test_cli_bench.py  test_cli_eligible.py  test_eligibility.py  test_ingest.py  test_keys.py  test_matrix.py
tests/campaign/: test_autopsy_final_turns.py  test_compare_campaigns.py  test_expand_campaign.py  test_forensic_stale_out.py  test_p3_qwen3_divergence.py  test_param_precedence.py  test_probe_runner_reset.py  test_run_campaign.py  test_run_phased.py  test_run_sweep_staged.py
tests/core/: test_contract.py  test_flow.py  test_learning.py  test_project.py  test_task.py
tests/exchange/: _fixtures.py  test_cli_contribute.py  test_index.py  test_package.py  test_sanitize.py  test_validate.py
tests/fleet/: test_agent_runtime.py  test_auto_hooks.py  test_auto_learning.py  test_cast.py  test_cast_matrix_citations.py  test_check_python.py  test_claude_code_adapter.py  test_control.py  test_dispatcher.py  test_distiller.py  test_e2e_live.py  test_edit_tools.py  test_error_router.py  test_fetch_tool_save_as.py  test_flywheel.py  test_harness_reliability.py  test_inner_tools.py  test_llm_adapter.py  test_llm_adapter_litellm.py  test_narration_redirect.py  test_nonblocking.py  test_orchestrator.py  test_orchestrator_observer.py  test_orchestrator_routing.py  test_output_path_banner.py  test_phase_gate.py  test_profiles.py  test_roles.py  test_runtime_notes.py  test_runtime_postconditions.py  test_runtime_tools.py  test_stage_runner.py  test_strategies.py  test_stub_awareness_hint.py  test_subprocess_helper.py  test_test_stages.py  test_unreachable_after_main.py  test_vram.py  test_vram_device.py  (+3 more)
(+155 files in other folders)
