[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora"
version = "0.1.0"
description = "Multi-agent orchestration framework built on Matrix + Manifold contracts."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "matrix-nio>=0.25",
    "aiohttp>=3.9",
    "GitPython>=3.1",
    "typer>=0.12",
    "pydantic-settings>=2.2",
    "mcp>=1.0",
    "trafilatura>=1.12",
]

[project.scripts]
agora = "agora.cli:app"

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
# Multi-provider adapter: one SDK routes to OpenAI, Anthropic, Gemini,
# Mistral, Groq, Bedrock, etc. via a single normalised interface. Pick
# the provider via the model-string prefix: "openai/gpt-4o-mini",
# "anthropic/claude-haiku-4-5", "gemini/gemini-1.5-flash", etc.
litellm = [
    "litellm>=1.52",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme>=3.0",
    "myst-parser[linkify]>=4.0",
    "sphinx-autobuild>=2024.10",
    "sphinx-copybutton>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "slow: end-to-end tests that drive a live model/daemon (gated by AGORA_E2E=1)",
]

[tool.coverage.run]
source = ["src/agora"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# workspace/ holds frozen LLM-generated artefacts from research runs;
# they're empirical evidence, not maintained source. docs/_build is
# Sphinx output. Both are gitignored or kept for reference, never
# linted.
extend-exclude = [
    "workspace",
    "docs/_build",
    "docs/api/_autosummary",
]

[tool.ruff.lint]
# Bug-finder families only. `UP` and `SIM` are stylistic / modernization
# suggestions that produce ~30+ low-value flags on this codebase; revisit
# in a dedicated cleanup pass, not as a CI gate.
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E501",  # line-too-long — handled by formatter, not a logic issue
    "E741",  # ambiguous-variable-name (`l`, `I`) — used intentionally
             # in a few iterators; not worth a churn pass.
]

[tool.ruff.lint.per-file-ignores]
# Runner scripts insert sys.path BEFORE importing agora.* so they work
# without `pip install -e .`. ruff sees that as "imports below the top".
"scripts/run_*.py" = ["E402"]
# Test scaffolds occasionally bind variables in `with` clauses we don't
# read — intentional to keep contextmanager scope explicit. Section-
# header comments before grouped imports trigger E402; that pattern is
# load-bearing for readability.
"tests/**/*.py" = ["F841", "E402"]
